--- a/style.css
+++ b/style.css
@@ -171,9 +171,8 @@ header.major{
     position: absolute;
     left: 0px;
     top: 50px;
-    background-image: url(box-01.jpg);
+    background-image: url(images/box-01.jpg);
     background-size: cover;
-    background-repeat: no-repeat;
 
 }
 
@@ -181,7 +180,7 @@ header.major{
     position: absolute;
     left: 190px;
     top: 50px;
-    background-image: url(box-02.jpg);
+    background-image: url(images/box-02.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -190,7 +189,7 @@ header.major{
     position: absolute;
     left: 380px;
     top: 50px;
-    background-image: url(box-03.jpg);
+    background-image: url(images/box-03.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -199,7 +198,7 @@ header.major{
     position: absolute;
     left: 0px;
     top: 240px;
-    background-image: url(box-04.jpg);
+    background-image: url(images/box-04.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -210,7 +209,7 @@ header.major{
     top: 240px;
     width: 370px;
     height: 140px;
-    background-image: url(box-05.jpg);
+    background-image: url(images/box-05.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -221,7 +220,7 @@ header.major{
     left: 0px;
     top: 430px;
     height: 140px;
-    background-image: url(box-06.jpg);
+    background-image: url(images/box-06.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -231,7 +230,7 @@ header.major{
     left: 190px;
     top: 390px;
     height: 160px;
-    background-image: url(box-07.jpg);
+    background-image: url(images/box-07.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -241,7 +240,7 @@ header.major{
     left: 380px;
     top: 390px;
     height: 160px;
-    background-image: url(box-08.jpg);
+    background-image: url(images/box-08.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
