--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ header.major{
     position: absolute;
     left: 0px;
     top: 50px;
-    background-image: url(./images/box-01.jpg);
+    background-image: url('./images/box-01.jpg');
     background-size: cover;
     background-repeat: no-repeat;
 }
