--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
 
@@ -89,8 +88,6 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
 .clearfix:before,
 .clearfix:after {
     content: " "; /* 1 */
@@ -110,8 +107,7 @@ textarea {
     *zoom: 1;
 }
 
-
-header.major{
+header.major {
     padding-top: 50px;
     display: inline-block;
     text-align: center;
@@ -126,8 +122,7 @@ header.major{
     display: inline-block;
 }
 
-
-.menu{
+.menu {
     display: inline-block;
     width: 30px;
     height: 30px;
@@ -135,7 +130,7 @@ header.major{
     margin: 0 auto;
 }
 
-.profile{
+.profile {
     display: inline-block;
     width: 30px;
     height: 30px;
@@ -143,13 +138,10 @@ header.major{
     margin: 0 auto;
 }
 
-
-.logo{
+.logo {
     height: auto;
     display: inline-block;
 }
-
-
 
 .container {
     width: 560px;
@@ -161,14 +153,12 @@ header.major{
 }
 
 .box {
-    width: 180px;
-    height: 180px;
+    width: 100%;
     background-color: gray;
     display: inline-block;
 }
 
 .one {
-    position: absolute;
     left: 0px;
     top: 50px;
     background-image: url('/images/box-01.jpg');
@@ -177,7 +167,6 @@ header.major{
 }
 
 .two {
-    position: absolute;
     left: 190px;
     top: 50px;
     background-image: url(images/box-02.jpg);
@@ -186,7 +175,6 @@ header.major{
 }
 
 .three {
-    position: absolute;
     left: 380px;
     top: 50px;
     background-image: url(images/box-03.jpg);
@@ -195,7 +183,6 @@ header.major{
 }
 
 .four {
-    position: absolute;
     left: 0px;
     top: 240px;
     background-image: url(images/box-04.jpg);
@@ -204,7 +191,6 @@ header.major{
 }
 
 .five {
-    position: absolute;
     left: 190px;
     top: 240px;
     width: 370px;
@@ -214,9 +200,7 @@ header.major{
     background-repeat: no-repeat;
 }
 
-
 .six {
-    position: absolute;
     left: 0px;
     top: 430px;
     height: 140px;
@@ -226,7 +210,6 @@ header.major{
 }
 
 .seven {
-    position: absolute;
     left: 190px;
     top: 390px;
     height: 160px;
@@ -236,7 +219,6 @@ header.major{
 }
 
 .eight {
-    position: absolute;
     left: 380px;
     top: 390px;
     height: 160px;
@@ -245,14 +227,12 @@ header.major{
     background-repeat: no-repeat;
 }
 
-
-
 .onehover {
     background-color: #fb7066;
     width: 180px;
     height: 180px;
     position: relative;
-    color:white;
+    color: white;
     opacity: 0;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -264,15 +244,12 @@ header.major{
     transition: all 0.2s linear;
 }
 
-
-
-
 .twohover {
     background-color: #ff9578;
     width: 180px;
     height: 180px;
     position: relative;
-    color:white;
+    color: white;
     opacity: 0;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -284,15 +261,12 @@ header.major{
     transition: all 0.2s linear;
 }
 
-
-
-
 .threehover {
     background-color: #434b5b;
     width: 180px;
     height: 180px;
     position: relative;
-    color:white;
+    color: white;
     opacity: 0;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -304,14 +278,12 @@ header.major{
     transition: all 0.2s linear;
 }
 
-
-
 .fourhover {
     background-color: #df98d5;
     width: 180px;
     height: 180px;
     position: relative;
-    color:white;
+    color: white;
     opacity: 0;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -323,13 +295,12 @@ header.major{
     transition: all 0.2s linear;
 }
 
-
 .fivehover {
     background-color: #e5d7c6;
     width: 370px;
     height: 140px;
     position: relative;
-    color:white;
+    color: white;
     opacity: 0;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -341,13 +312,12 @@ header.major{
     transition: all 0.2s linear;
 }
 
-
 .sevenhover {
     background-color: #ffd47d;
     width: 180px;
     height: 160px;
     position: relative;
-    color:white;
+    color: white;
     opacity: 0;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -359,14 +329,12 @@ header.major{
     transition: all 0.2s linear;
 }
 
-
-
 .eighthover {
     background-color: #ffbfae;
     width: 180px;
     height: 160px;
     position: relative;
-    color:white;
+    color: white;
     opacity: 0;
     cursor: pointer;
     transition: all 0.2s linear;
@@ -378,23 +346,17 @@ header.major{
     transition: all 0.2s linear;
 }
 
-
-
-
-
 /*.title {*/
-    /*position: absolute;*/
-    /*top: 70px;*/
-    /*left: 20px;*/
+/*position: absolute;*/
+/*top: 70px;*/
+/*left: 20px;*/
 /*}*/
 
 /*.category {*/
-    /*position: absolute;*/
-    /*top: 90px;*/
-    /*left: 20px;*/
+/*position: absolute;*/
+/*top: 90px;*/
+/*left: 20px;*/
 /*}*/
-
-
 
 .titlefont {
     font-family: montserrat;
@@ -403,23 +365,19 @@ header.major{
     letter-spacing: -1;
 }
 
-
 .categoryfont {
     font-family: montserrat;
-    font-size: 9pt;
+    font-size: 7pt;
     text-transform: uppercase;
     letter-spacing: -1;
     font-weight: 200;
 }
-
-
 
 .details {
     width: 560px;
     height: 200px;
     margin: 0 auto;
     padding-top: 70px;
-
 }
 
 .detail1 {
@@ -447,7 +405,6 @@ header.major{
 
 }
 
-
 .end {
     height: 100px;
     margin: 0 auto;
@@ -468,7 +425,6 @@ header.major{
     text-transform: uppercase;
     color: #545456;
 }
-
 
 .people {
     width: 120px;
@@ -495,13 +451,12 @@ header.major{
 }
 
 .detailtext {
-    font-family:'Lato', 'nanum gothic', sans-serif;
+    font-family: 'Lato', 'nanum gothic', sans-serif;
     font-size: 7.5pt;
     letter-spacing: -0.5;
     color: #545456;
     line-height: 190%;
 }
-
 
 .left {
     position: fixed;
@@ -514,8 +469,6 @@ header.major{
     top: 50%;
     right: 20px;
 }
-
-
 
 .x-align-middle {
     display: inline-block;
@@ -557,7 +510,6 @@ header.major{
     background-size: contain;
 }
 
-
 .profile2 {
     width: 310px;
     height: 200px;
@@ -568,12 +520,10 @@ header.major{
 }
 
 .profiletext {
-    font-family:'Lato', 'nanum gothic', sans-serif;
+    font-family: 'Lato', 'nanum gothic', sans-serif;
     font-size: 12pt;
     color: #545456;
 }
-
-
 
 .profiletext2 {
     font-family: montserrat;
@@ -583,11 +533,68 @@ header.major{
     padding-top: 50px;
 }
 
-
-
 .profiletext3 {
     font-family: montserrat;
     font-size: 10pt;
     color: #565656;
     margin-left: 10px;
 }
+
+@media only screen and (min-width: 35em) {
+
+
+    /*body {*/
+        /*padding-top: 80px;*/
+    /*}*/
+
+    .x-com {
+        display: block;
+    }
+
+    .x-mobile {
+        display: none;
+    }
+
+
+
+    section.x-major article#x-profile ul.x-members li {
+        width: 25%;
+    }
+
+    section.x-major article#x-portfolio ul li {
+        float: left;
+        width: 50%;
+    }
+
+    section.x-major.x-portfolio-detail header dl {
+        text-align: center;
+    }
+    .box {
+        width: 180px;
+        height: 180px;
+        position: absolute;
+    }
+
+    .five {
+        width: 370px;
+        height: 140px;
+        position: absolute;
+
+    }
+
+    .six {
+        height: 140px;
+
+    }
+
+    .seven {
+        height: 160px;
+
+    }
+
+    .eight {
+        height: 160px;
+    }
+}
+
+
