--- a/style.css
+++ b/style.css
@@ -154,7 +154,7 @@ header.major {
 
 .box {
     width: 100%;
-    height: 300px;
+    height: 450px;
     background-color: gray;
     display: inline-block;
 }
@@ -166,11 +166,14 @@ header.major {
     background-size: cover;
     background-repeat: no-repeat;
 }
+.one a{
+
+}
 
 .two {
     left: 190px;
     top: 50px;
-    background-image: url(images/box-02.jpg);
+    background-image: url('images/box-02.jpg');
     background-size: cover;
     background-repeat: inherit;
     background-position: center;
@@ -179,7 +182,7 @@ header.major {
 .three {
     left: 380px;
     top: 50px;
-    background-image: url(images/box-03.jpg);
+    background-image: url('images/box-03.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -188,7 +191,7 @@ header.major {
 .four {
     left: 0px;
     top: 240px;
-    background-image: url(images/box-04.jpg);
+    background-image: url('images/box-04.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -199,7 +202,7 @@ header.major {
     top: 240px;
     /*width: 370px;*/
     /*height: 140px;*/
-    background-image: url(images/box-05.jpg);
+    background-image: url('images/box-05.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -219,7 +222,7 @@ header.major {
     left: 190px;
     top: 390px;
     /*height: 160px;*/
-    background-image: url(images/box-07.jpg);
+    background-image: url('images/box-07.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -230,7 +233,7 @@ header.major {
     left: 380px;
     top: 390px;
     /*height: 160px;*/
-    background-image: url(images/box-08.jpg);
+    background-image: url('images/box-08.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
