--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ header.major {
     left: 190px;
     top: 50px;
     background-image: url('images/box-02.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -183,7 +183,7 @@ header.major {
     left: 380px;
     top: 50px;
     background-image: url('images/box-03.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -191,7 +191,7 @@ header.major {
     left: 0px;
     top: 240px;
     background-image: url('images/box-04.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -201,7 +201,7 @@ header.major {
     /*width: 370px;*/
     /*height: 140px;*/
     background-image: url('images/box-05.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
@@ -220,7 +220,7 @@ header.major {
     top: 390px;
     /*height: 160px;*/
     background-image: url('images/box-07.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 
 }
@@ -230,7 +230,7 @@ header.major {
     top: 390px;
     /*height: 160px;*/
     background-image: url('images/box-08.jpg');
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
 }
 
