--- a/style.css
+++ b/style.css
@@ -202,6 +202,7 @@ header.major {
     /*height: 140px;*/
     background-image: url('images/box-05.jpg');
     background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
