--- a/style.css
+++ b/style.css
@@ -519,6 +519,71 @@ left: 20px;
         height: 180px;
         position: absolute;
     }
+    .one {
+        left: 0px;
+        top: 50px;
+        background-image: url('images/box-01.jpg');
+        /*background-size: cover;*/
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+
+    .two {
+        left: 190px;
+        top: 50px;
+        background-image: url('images/box-02.jpg');
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    .three {
+        left: 380px;
+        top: 50px;
+        background-image: url('images/box-03.jpg');
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    .four {
+        left: 0px;
+        top: 240px;
+        background-image: url('images/box-04.jpg');
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+    .five {
+        left: 190px;
+        top: 240px;
+        /*width: 370px;*/
+        /*height: 140px;*/
+        position: absolute;
+        background-image: url('images/box-05.jpg');
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
+
+
+
+    .seven {
+        left: 190px;
+        top: 390px;
+        /*height: 160px;*/
+        background-image: url('images/box-07.jpg');
+        background-size: contain;
+        background-repeat: no-repeat;
+
+    }
+
+    .eight {
+        left: 380px;
+        top: 390px;
+        /*height: 160px;*/
+        background-image: url('images/box-08.jpg');
+        background-size: contain;
+        background-repeat: no-repeat;
+    }
 
     .five {
         width: 370px;
@@ -546,7 +611,7 @@ left: 20px;
         padding-top: 50px;
         display: inline-block;
         text-align: center;
-        width: 100%;
+        width: 570px;
         height: auto;
         margin: 0 auto;
 
@@ -576,6 +641,15 @@ left: 20px;
     .logo {
         height: auto;
         display: inline-block;
+    }
+
+    .container {
+        width: 570px;
+        height: 680px;
+        margin: 0 auto;
+        display: block;
+        padding-top: 30px;
+        position: relative;
     }
 
     .onehover {
