--- a/style.css
+++ b/style.css
@@ -567,7 +567,7 @@ left: 20px;
         left: 190px;
         top: 240px;
         width: 370px;
-        height: 140px;
+        height: 100px;
         position: absolute;
         background-image: url('images/box-05.jpg');
         background-size: contain;
@@ -600,6 +600,30 @@ left: 20px;
     .six {
         height: 140px;
 
+    }
+    .six {
+    left: 0px;
+    top: 430px;
+    height: 140px;
+    background-image: url(images/box-06.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    }
+
+    .nine {
+        left: 190px;
+        top: 560px;
+        width: 370px;
+        height: 159px;
+        background-color: mistyrose;
+    }
+
+    .ten {
+        left: 0px;
+        top: 580px;
+        height: 100px;
+        background-color: #FFCCCC;
     }
 
     .seven {
@@ -651,7 +675,7 @@ left: 20px;
 
     .container {
         width: 560px;
-        height: 680px;
+        height: 800px;
         margin: 0 auto;
         display: block;
         padding-top: 30px;
@@ -775,8 +799,11 @@ left: 20px;
     .eighthover:hover {
         opacity: 1;
         transition: all 0.2s linear;
-    }
 
-}
+
+       }
+
+
+
 
 
