--- a/style.css
+++ b/style.css
@@ -142,10 +142,28 @@ header.major {
     margin: 0 auto;
 }
 
+
+
+.profile .container {
+    transition: all 0.2s linear;
+}
+
+
+.profile:hover .container {
+    top: 200px;
+    transition: all 0.2s linear;
+}
+
 .logo {
     height: auto;
     display: inline-block;
 }
+
+
+
+
+
+
 
 .container {
     width: 100%;
@@ -154,6 +172,7 @@ header.major {
     display: block;
     padding-top: 30px;
     position: relative;
+    transition: all 0.2s linear;
 }
 
 .box {
@@ -322,15 +341,15 @@ left: 20px;
 }
 
 .details {
-    width: 560px;
-    height: 200px;
+    width: 100%;
+    height: 160px;
     margin: 0 auto;
-    padding-top: 70px;
+    padding-top: 20px;
 }
 
 .detail1 {
-    width: 160px;
-    height: 200px;
+    width: 100%;
+    height: 130px;
     float: left;
     border-top: 7px solid #545456;
     padding-top: 10px;
@@ -343,11 +362,27 @@ left: 20px;
     padding-top: 25px;
 }
 
+.detail2_m {
+    width: 100%;
+    height: 100px;
+
+}
+
 .works {
     margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     width: 560px;
+    height: 600px;
+    background-color: #f7f7f7;
+
+}
+
+.works2 {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
     height: 600px;
     background-color: #f7f7f7;
 
@@ -384,6 +419,7 @@ left: 20px;
     background-image: url(images/people-1.svg);
     background-size: contain;
     background-repeat: no-repeat;
+
 }
 
 .people2 {
@@ -392,6 +428,7 @@ left: 20px;
     background-image: url(images/people-2.svg);
     background-size: contain;
     background-repeat: no-repeat;
+
 }
 
 .people3 {
@@ -400,6 +437,7 @@ left: 20px;
     background-image: url(images/people-3.svg);
     background-size: contain;
     background-repeat: no-repeat;
+
 }
 
 .detailtext {
@@ -407,8 +445,12 @@ left: 20px;
     font-size: 7.5pt;
     letter-spacing: -0.5;
     color: #545456;
-    line-height: 190%;
+    line-height: 50%;
+    height: 70px;
 }
+
+.detailcategory {
+    text-align: right; }
 
 .left {
     position: fixed;
@@ -447,27 +489,32 @@ left: 20px;
 }
 
 .profiledetail {
-    width: 560px;
-    height: 200px;
+    width: 100%;
     margin: 0 auto;
-    padding-top: 70px;
+    padding-top: 20px;
+    height: 700px;
+    margin: 0 auto;
 
 }
 
 .profile1 {
-    width: 200px;
+    width: 100%;
     height: 200px;
-    float: left;
-    background-image: url(images/profile-dasom.svg);
+    background-image: url(images/dasom.png);
     background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin-bottom: 30px;
+
 }
 
 .profile2 {
-    width: 310px;
-    height: 200px;
-    float: right;
-    border-top: 7px solid #f0ece0;
+    width: 100%;
+    margin: 0 auto;
+
     padding-top: 10px;
+    vertical-align: middle;
+
 
 }
 
@@ -475,6 +522,7 @@ left: 20px;
     font-family: 'Lato', 'nanum gothic', sans-serif;
     font-size: 12pt;
     color: #545456;
+    text-align: center;
 }
 
 .profiletext2 {
@@ -483,6 +531,7 @@ left: 20px;
     text-transform: uppercase;
     color: #df98d5;
     padding-top: 50px;
+    vertical-align: middle;
 }
 
 .profiletext3 {
@@ -490,7 +539,26 @@ left: 20px;
     font-size: 10pt;
     color: #565656;
     margin-left: 10px;
+    text-align: center;
+    width: 100%;
 }
+
+.profilebox {
+    width: 100%;
+    align-content: center;
+    text-align: center;
+}
+
+.profilebox2 {
+    width: 250px;
+    height: 100%;
+    margin: 0 auto;
+    padding-top: 10px;
+    vertical-align: middle;
+}
+
+
+
 .x-com {
     display: none;
 }
@@ -810,6 +878,123 @@ left: 20px;
 
 
        }
+
+
+
+    .profiledetail {
+        width: 560px;
+        height: 450px;
+        margin: 0 auto;
+        padding-top: 70px;
+
+    }
+
+    .profile1 {
+        width: 200px;
+        height: 200px;
+        float: left;
+        background-image: url(images/dasom.png);
+        background-size: contain;
+    }
+
+    .profile2 {
+        width: 305px;
+        height: 150px;
+        float: right;
+        border-top: 7px solid #f0ece0;
+
+    }
+
+    .profiletext {
+        font-family: 'Lato', 'nanum gothic', sans-serif;
+        font-size: 12pt;
+        color: #545456;
+    }
+
+    .profiletext2 {
+        font-family: montserrat;
+        font-size: 10pt;
+        text-transform: uppercase;
+        color: #df98d5;
+        padding-top: 50px;
+    }
+
+    .profiletext3 {
+        font-family: montserrat;
+        font-size: 10pt;
+        color: #565656;
+        margin-left: 10px;
+    }
+
+
+    .detailtext {
+        font-family: 'Lato', 'nanum gothic', sans-serif;
+        font-size: 7.5pt;
+        letter-spacing: -0.7;
+        color: #545456;
+        line-height: 0%;
+        height: 60px;
+        text-align: justify;
+    }
+
+
+    .details {
+        width: 560px;
+        height: 200px;
+        margin: 0 auto;
+        padding-top: 70px;
+    }
+
+    .detail1 {
+        width: 160px;
+        height: 130px;
+        float: left;
+        border-top: 7px solid #545456;
+        padding-top: 10px;
+    }
+
+    .detail2 {
+        width: 360px;
+        height: 200px;
+        float: right;
+        padding-top: 25px;
+    }
+
+
+    .people {
+        width: 120px;
+        height: 40px;
+        background-image: url(images/people-1.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        float: left;
+    }
+
+    .people2 {
+        width: 120px;
+        height: 40px;
+        background-image: url(images/people-2.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        float: left;
+    }
+
+    .people3 {
+        width: 120px;
+        height: 40px;
+        background-image: url(images/people-3.svg);
+        background-size: contain;
+        background-repeat: no-repeat;
+        float: left;
+    }
+
+    .details {
+        width: 560px;
+        height: 200px;
+        margin: 0 auto;
+        padding-top: 70px;
+    }
+
 
 
 
