--- a/style.css
+++ b/style.css
@@ -111,6 +111,11 @@ a {
     text-decoration: none;
 }
 
+
+p { text-align:justify; text-justify:inter-cluster; }
+
+
+
 header.major {
     padding-top: 20px;
     display: inline-block;
@@ -351,30 +356,29 @@ left: 20px;
     width: 100%;
     height: 130px;
     float: left;
-    border-top: 7px solid #545456;
-    padding-top: 10px;
+    border-top: 6px solid #545456;
+    padding-top: 7px;
 }
 
 .detail2 {
     width: 360px;
-    height: 200px;
+    height: 100px;
     float: right;
     padding-top: 25px;
 }
 
 .detail2_m {
     width: 100%;
-    height: 100px;
 
 }
 
 .works {
-    margin-top: 20px;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     width: 560px;
-    height: 600px;
-    background-color: #f7f7f7;
+    /*height: 100%;*/
+
 
 }
 
@@ -384,7 +388,6 @@ left: 20px;
     margin-right: auto;
     width: 100%;
     height: 600px;
-    background-color: #f7f7f7;
 
 }
 
@@ -442,11 +445,15 @@ left: 20px;
 
 .detailtext {
     font-family: 'Lato', 'nanum gothic', sans-serif;
-    font-size: 7.5pt;
+    font-size: 9.5pt;
+    display: block;
+    text-align: justify;
     letter-spacing: -0.5;
     color: #545456;
-    line-height: 50%;
+    line-height: 180%;
     height: 70px;
+
+
 }
 
 .detailcategory {
@@ -543,6 +550,19 @@ left: 20px;
     width: 100%;
 }
 
+.detailtext2 {
+    font-family: 'Lato', 'nanum gothic', sans-serif;
+    font-size: 9.5pt;
+    letter-spacing: -0.5;
+    color: #545456;
+    line-height: 180%;
+    height: 70px;
+    display: block;
+    text-align: justify;
+}
+
+
+
 .profilebox {
     width: 100%;
     align-content: center;
@@ -557,7 +577,10 @@ left: 20px;
     vertical-align: middle;
 }
 
-
+div#img-resize img {
+    display:block;
+    width:100%;
+}
 
 .x-com {
     display: none;
@@ -929,11 +952,12 @@ left: 20px;
 
     .detailtext {
         font-family: 'Lato', 'nanum gothic', sans-serif;
-        font-size: 7.5pt;
-        letter-spacing: -0.7;
+        font-size: 8pt;
+        letter-spacing: -0.5;
         color: #545456;
-        line-height: 0%;
+        line-height: 180%;
         height: 60px;
+        display: block;
         text-align: justify;
     }
 
@@ -988,12 +1012,32 @@ left: 20px;
         float: left;
     }
 
+    div#img-resize img {
+        display:block;
+        width:560px;
+    }
+
+    .detailtext2 {
+        font-family: 'Lato', 'nanum gothic', sans-serif;
+        font-size: 7.5pt;
+        letter-spacing: -0.5;
+        color: #545456;
+        line-height: 150%;
+        height: 70px;
+        display: block;
+        text-align: justify;
+    }
+
+
     .details {
         width: 560px;
         height: 200px;
         margin: 0 auto;
         padding-top: 70px;
     }
+
+
+
 
 
 
