--- a/style.css
+++ b/style.css
@@ -350,8 +350,10 @@ left: 20px;
     width: 100%;
     height: 160px;
     margin: 0 auto;
-    padding-top: 20px;
+    /*padding-top: 20px;*/
     background-color: #f4f4f4;
+
+
 }
 
 .detail1 {
@@ -361,6 +363,8 @@ left: 20px;
     /*border-top: 6px solid #545456;*/
     background-color: #f4f4f4;
     padding: 15px;
+
+
 }
 
 .detail2 {
@@ -422,6 +426,7 @@ left: 20px;
     color: #545456;
 
 
+
 }
 
 .people {
@@ -448,6 +453,7 @@ left: 20px;
     background-image: url(images/people-3.svg);
     background-size: contain;
     background-repeat: no-repeat;
+
 
 }
 
@@ -1101,6 +1107,7 @@ div#img-resize img {
     .mail {
         opacity: 1;
         transition: all 0.2s linear;
+
     }
 
 
