--- a/style.css
+++ b/style.css
@@ -589,6 +589,7 @@ left: 20px;
     margin: 0 auto;
     padding-top: 10px;
     vertical-align: middle;
+    padding-bottom: 30px;
 }
 
 div#img-resize img {
