--- a/style.css
+++ b/style.css
@@ -240,15 +240,15 @@ header.major {
     background-repeat: no-repeat;
 }
 
-/*.six {*/
-    /*left: 0px;*/
-    /*top: 430px;*/
-    /*height: 140px;*/
-    /*background-image: url(images/box-06.jpg);*/
-    /*background-size: cover;*/
-    /*background-repeat: no-repeat;*/
-    /*background-position: center;*/
-/*}*/
+.six {
+left: 0px;
+top: 430px;
+height: 140px;
+background-image: url(images/box-06.jpg);
+background-size: cover;
+background-repeat: no-repeat;
+background-position: center;
+}
 
 .seven {
     left: 190px;
@@ -262,10 +262,33 @@ header.major {
 }
 
 .eight {
+     left: 380px;
+     top: 390px;
+     /*height: 160px;*/
+     background-image: url('images/box-08.jpg');
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: center;
+ }
+
+
+
+.nine {
     left: 380px;
     top: 390px;
     /*height: 160px;*/
-    background-image: url('images/box-08.jpg');
+    background-image: url('images/box-09.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+
+.ten {
+    left: 380px;
+    top: 390px;
+    /*height: 160px;*/
+    background-image: url('images/box-10.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -320,15 +343,15 @@ header.major {
 
 
 .title {
-position: absolute;
-top: 70px;
-left: 20px;
+    position: absolute;
+    top: 70px;
+    left: 20px;
 }
 
 .category {
-position: absolute;
-top: 90px;
-left: 20px;
+    position: absolute;
+    top: 90px;
+    left: 20px;
 }
 
 .titlefont {
@@ -588,8 +611,8 @@ left: 20px;
     height: 100%;
     margin: 0 auto;
     padding-top: 10px;
-    vertical-align: middle;
     padding-bottom: 30px;
+    vertical-align: middle;
 }
 
 div#img-resize img {
@@ -610,7 +633,7 @@ div#img-resize img {
 
 
     /*body {*/
-        /*padding-top: 80px;*/
+    /*padding-top: 80px;*/
     /*}*/
 
     .x-com {
@@ -640,12 +663,7 @@ div#img-resize img {
         height: 180px;
         position: absolute;
         min-height: 140px;
-
     }
-
-
-
-
 
 
 
@@ -697,22 +715,6 @@ div#img-resize img {
 
 
 
-    .six{ left: 0px;
-        top: 430px;
-        height: 140px;
-        background-image: url(images/box-06.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;}
-
-
-
-
-    }
-
-
-
-
     .seven {
         left: 190px;
         top: 390px;
@@ -734,10 +736,21 @@ div#img-resize img {
 
 
 
+    .six {
+        height: 140px;
 
+    }
+    .six {
+        left: 0px;
+        top: 430px;
+        height: 140px;
+        background-image: url(images/box-06.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position: center;
+    }
 
-
-    .ten {
+    .nine {
         left: 190px;
         top: 560px;
         width: 370px;
@@ -749,7 +762,7 @@ div#img-resize img {
         background-position: center;
     }
 
-    .nine {
+    .ten {
         left: 0px;
         top: 580px;
         height: 100px;
@@ -762,19 +775,11 @@ div#img-resize img {
 
     .seven {
         height: 160px;
-        background-image: url(images/box-07.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
 
     }
 
     .eight {
         height: 160px;
-        background-image: url(images/box-08.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center;
     }
 
 
@@ -915,8 +920,6 @@ div#img-resize img {
 
 
 
-
-
     .sixhover {
         background-color: #eeeadf;
         width: 180px;
@@ -936,11 +939,6 @@ div#img-resize img {
 
     }
 
-
-
-
-
-
     .sevenhover {
         background-color: #ffd47d;
         width: 180px;
@@ -958,11 +956,6 @@ div#img-resize img {
         transition: all 0.2s linear;
     }
 
-
-
-
-
-
     .eighthover {
         background-color: #ffbfae;
         width: 180px;
@@ -978,13 +971,11 @@ div#img-resize img {
     .eighthover:hover {
         opacity: 1;
         transition: all 0.2s linear;
+
+
     }
 
-
-
-
-
-    .ninehover {
+    .tenhover {
         background-color: #ffcccc;
         width: 180px;
         height: 140px;
@@ -996,7 +987,7 @@ div#img-resize img {
 
     }
 
-    .ninehover:hover {
+    .tenhover:hover {
         opacity: 1;
         transition: all 0.2s linear;
 
@@ -1004,11 +995,10 @@ div#img-resize img {
     }
 
 
-
-    .tenhover {
+    .ninehover {
         background-color: #ffe4e1;
         width: 370px;
-        height: 159px;
+        height: 160px;
         position: relative;
         color: white;
         opacity: 0;
@@ -1017,7 +1007,7 @@ div#img-resize img {
 
     }
 
-    .tenhover:hover {
+    .ninehover:hover {
         opacity: 1;
         transition: all 0.2s linear;
 
@@ -1049,6 +1039,7 @@ div#img-resize img {
         height: 150px;
         float: right;
         border-top: 7px solid #f0ece0;
+
 
     }
 
@@ -1091,9 +1082,19 @@ div#img-resize img {
         height: 150px;
         margin: 0 auto;
         padding-top: 40px;
-        background-color: #ffffff;
+        background-color: #ffffff;}
 
-    }
+
+
+    .iconbox {
+
+    width: 560px;
+    height: 200px;
+    margin-top: 60px;}
+}
+
+
+
 
     .detail1 {
         width: 160px;
@@ -1181,7 +1182,7 @@ div#img-resize img {
 
     .logo {
 
-    transition: all 0.2s linear;
+        transition: all 0.2s linear;
 
     }
 
@@ -1194,7 +1195,7 @@ div#img-resize img {
 
     .profile {
 
-    transition: all 0.2s linear;
+        transition: all 0.2s linear;
 
     }
 
