--- a/style.css
+++ b/style.css
@@ -1086,12 +1086,12 @@ div#img-resize img {
 
 
 
-    .iconbox {
+    /*.contact {*/
 
-    width: 560px;
-    height: 200px;
-    margin-top: 60px;}
-}
+    /*width: 100%;*/
+    /*height: 200px;*/
+    /*margin-top: 60px;}*/
+/*}*/
 
 
 
