--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ background-position: center;
 .profile1 {
     width: 100%;
     height: 200px;
-    background-image: url(images/dasom.png);
+    background-image: url(images/dasom_other.jpg);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -573,7 +573,7 @@ background-position: center;
     font-family: montserrat;
     font-size: 10pt;
     text-transform: uppercase;
-    color: #df98d5;
+    color: #545456;
     padding-top: 50px;
     vertical-align: middle;
 }
@@ -803,13 +803,13 @@ div#img-resize img {
 
     }
 
-    .menu {
-        display: inline-block;
-        width: 30px;
-        height: 30px;
-        float: left;
-        margin: 0 auto;
-    }
+    /*.menu {*/
+        /*display: inline-block;*/
+        /*width: 30px;*/
+        /*height: 30px;*/
+        /*float: left;*/
+        /*margin: 0 auto;*/
+    /*}*/
 
     .profile {
         display: inline-block;
@@ -821,6 +821,7 @@ div#img-resize img {
 
     .logo {
         height: auto;
+        float: left;
         display: inline-block;
     }
 
@@ -1027,11 +1028,11 @@ div#img-resize img {
     }
 
     .profile1 {
-        width: 200px;
-        height: 200px;
+        width: 210px;
+        /*height: 300px;*/
         float: left;
-        background-image: url(images/dasom.png);
-        background-size: contain;
+        background-image: url(images/dasom_other.jpg);
+        background-size: cover;
     }
 
     .profile2 {
@@ -1053,7 +1054,7 @@ div#img-resize img {
         font-family: montserrat;
         font-size: 10pt;
         text-transform: uppercase;
-        color: #df98d5;
+        color: #545456;
         padding-top: 50px;
     }
 
