--- a/style.css
+++ b/style.css
@@ -536,7 +536,7 @@ background-position: center;
     width: 100%;
     margin: 0 auto;
     padding-top: 20px;
-    height: 700px;
+    height: 600px;
     margin: 0 auto;
 
 }
@@ -1021,7 +1021,7 @@ div#img-resize img {
 
     .profiledetail {
         width: 560px;
-        height: 450px;
+        height: 370px;
         margin: 0 auto;
         padding-top: 30px;
 
@@ -1087,12 +1087,12 @@ div#img-resize img {
 
 
 
-    /*.contact {*/
+    .contact {
 
-    /*width: 100%;*/
-    /*height: 200px;*/
-    /*margin-top: 60px;}*/
-/*}*/
+    width: 100%;
+    /*height: 100px;*/
+    margin-top: 40px;}
+}
 
 
 
