--- a/style.css
+++ b/style.css
@@ -1087,12 +1087,12 @@ div#img-resize img {
 
 
 
-    .contact {
+    /*.contact {*/
 
-    width: 100%;
+    /*width: 100%;*/
     /*height: 100px;*/
-    margin-top: 40px;}
-}
+    /*margin-top: 40px;}*/
+/*}*/
 
 
 
